--- a/client/src/pages/Login/login.module.css
+++ b/client/src/pages/Login/login.module.css
@@ -18,13 +18,15 @@
     margin-top: 20%;
     background-color: white;
     padding: 1%;
+    gap: 10px;
     border-radius: 10%;
-    box-shadow: 0px -1px 5px 3px #313372;
-    -webkit-box-shadow: 0px -1px 5px 3px #313372;
-    -moz-box-shadow: 0px -1px 5px 3px #313372;
+    border: 2px solid black;
+    box-shadow: 0px -1px 5px 3px white;
+    -webkit-box-shadow: 0px -1px 5px 3px white;
+    -moz-box-shadow: 0px -1px 5px 3px white;
 }
 .logo {
-    width: 200px;
+    width: 150px;
 }
 .form {
     display: flex;
@@ -39,14 +41,14 @@
     font-weight: bold;
     font-size: 1.2rem;
     padding: 1% 0% 1% 0%;
-    color: #313372;
+    color: black;
     margin: 0;
 }
 .subtitulo {
     font-weight: bold;
     font-size: 0.9rem;
     padding: 1% 0% 2% 0%;
-    color: #313372;
+    color: black;
     margin: 0;
 }
 .form {
@@ -66,14 +68,14 @@
     border-radius: 10px;
     background: transparent;
     margin-top: 0.15rem;
-    border: 0.1rem solid #313372;
+    border: 0.1rem solid black;
 }
 .form input::placeholder {
     font-size: 0.9rem;
 }
 .form input:focus {
     outline: none;
-    border: 0.15rem solid #313372;
+    border: 0.15rem solid black;
 }
 .formbutton {
     border: none;
@@ -86,15 +88,15 @@
     cursor: pointer;
     position: relative;
     transition: 0.2s;
-    border: 1px solid #313372;
+    border: 1px solid #10101a;
     color: white;
-    background-color: #313372;
+    background-color: #10101a;
     transition: 0.3s;
     overflow: hidden;
 }
 .formbutton:hover {
-    color: white;
-    background-color: green;
+    color: black;
+    background-color: white;
     scale: 1.02;
 }
 .divOpciones {
@@ -110,7 +112,7 @@
 .olvido{
     font-size: 0.8rem;
     text-decoration: white;
-    color: #313372;
+    color: black;
     padding: 3px;
 }
 .olvido:hover {
